# insecure-cplusplus-dojo

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  LICENSE_CYBER_DOJO.md  README.md  pipe_build_up_test.sh  vcpkg.json
check_bypass/: CMakeLists.txt  check_bypass.cpp  check_bypass.hpp  check_bypass.tests.cpp  check_bypass_solution.txt  makefile  manifest.json  readme.txt
cmake/: vcpkg.cmake
comparisons/: CMakeLists.txt  comparisons.cpp  comparisons.hpp  comparisons.tests.cpp  comparisons_solution.txt  makefile  manifest.json  readme.txt
docker/: .dockerignore  Dockerfile  Dockerfile.base  README.md  catch_main.cpp  image_name.json  install.sh  red_amber_green.rb
free_use/: CMakeLists.txt  free_use.cpp  free_use.hpp  free_use.tests.cpp  free_use_solution.txt  makefile  manifest.json  readme.txt
heartbleed/: CMakeLists.txt  cyber-dojo.sh  heartbleed.c  heartbleed.h  heartbleed.tests.cpp  makefile  manifest.json  readme.txt  split_solution.txt
signed_addition_overflow/: CMakeLists.txt  makefile  manifest.json  readme.txt  signed_overflow.cpp  signed_overflow.tests.cpp  signed_overflow_solution.txt
string_length/: CMakeLists.txt  makefile  manifest.json  readme.txt  string_length.cpp  string_length.hpp  string_length.tests.cpp  string_length_solution.txt
type_conversion/: CMakeLists.txt  makefile  manifest.json  readme.txt  type_conversion.c  type_conversion.h  type_conversion.tests.cpp  type_conversion_solution.txt
ub_compiler_optimizations/: hiker.tests.cpp  makefile  manifest.json  signed_overflow.cpp  signed_overflow.hpp  (+1 more)
yatzy/: CMakeLists.txt  (+7 more)
(+2 files in other folders)
